feat: mvp feature integration

--- a/public/index.html
+++ b/public/index.html
@@ -36,6 +36,9 @@
     <script src="%PUBLIC_URL%/assets/js/isotope.pkgd.min.js"></script>
     <script src="%PUBLIC_URL%/assets/js/owl.carousel.min.js"></script>
     <script src="%PUBLIC_URL%/assets/js/countdown.min.js"></script>
+    <script src="%PUBLIC_URL%/assets/js/nice-select.js"></script>
+    <script src="%PUBLIC_URL%/assets/js/magnific-popup.min.js"></script>
+    <script src="%PUBLIC_URL%/assets/js/wow.min.js"></script>
     <script src="%PUBLIC_URL%/assets/js/main.js"></script>
   </body>
 </html>
